<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MoreFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/userprofile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <xyz.yuersan.schoolnfo.util.CircleImageView
                android:id="@+id/img_userprofile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/head_default" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/img_userprofile">

                <TextView
                    android:id="@+id/text_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Howl_Wang"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_userrole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/text_username"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/text_username"
                    android:background="@drawable/round_color_userrole"
                    android:text="家长"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_username"
                    android:layout_marginTop="2dp"
                    android:text="@string/userprofile_card_hint"
                    android:textColor="@color/gray"
                    android:textSize="13sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/profile_forward"
                    android:paddingStart="0dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/ic_userprofile_forward" />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:clickable="false"
        android:focusable="false"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/student_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/morefragment_item_ripple"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imgstudentfile"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/studentfile"
                    android:src="@drawable/ic_morefragment_studentfile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/imgstudentfile"
                    android:text="@string/studentfile"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingStart="0dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/ic_morefragment_forward_gray" />
            </RelativeLayout>
            <!--分割线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#33000000" />

            <RelativeLayout
                android:id="@+id/student_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/morefragment_item_ripple"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imgstudentgrade"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/studentgrade"
                    android:src="@drawable/ic_morefragment_studentgrade" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/imgstudentgrade"
                    android:text="@string/studentgrade"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingStart="0dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/ic_morefragment_forward_gray" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#33000000" />

            <RelativeLayout
                android:id="@+id/student_award"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/morefragment_item_ripple"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imgstudentaward"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/studentaward"
                    android:src="@drawable/ic_morefragment_studentaward" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/imgstudentaward"
                    android:text="@string/studentaward"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingStart="0dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/ic_morefragment_forward_gray" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/imgtheme"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/theme"
                android:src="@drawable/ic_morefragment_theme" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/imgtheme"
                android:text="@string/theme"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingStart="0dp"
                android:paddingEnd="8dp"
                android:src="@drawable/ic_morefragment_forward_gray" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/imgsetting"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/setting"
                android:src="@drawable/ic_morefragment_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/imgsetting"
                android:text="@string/setting"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingStart="0dp"
                android:paddingEnd="8dp"
                android:src="@drawable/ic_morefragment_forward_gray" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>